syntax = "proto3";

package spine.test.system.server;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.system.server";
option java_outer_classname = "MirrorTestEventsProto";
option java_multiple_files = true;

import "spine/net/url.proto";
import "spine/test/system/server/mirror_test.proto";

message MRPhotoUploaded {

    MRPhotoId id = 1;

    spine.net.Url full_size_url = 2 [(validate) = true];

    spine.net.Url thumbnail_url = 3 [(validate) = true, (required) = false];

    string alt_text = 4;
}